syntax = "proto3";

option java_package = "com.example.medisupplyapp.datastore";
option java_multiple_files = true;

message AuthCacheProto {
  string access_token = 1;
  string name = 2;
  string last_name = 3;
  string email = 4;
  int32 user_id = 5;
  string role = 6;
  string id_token = 7;
  string refresh_token = 8;
}